Avoid asking the user twice for required actions when closing a window

BUG: 469690